Enable Java 14 preview features (records); Externalize gradle properties.